fixed overflow on all pages

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -106,6 +106,12 @@ footer {
   padding-bottom: 3rem;
 }
 
-.home {
+.home,
+.aqueen-lavender,
+.las-palmas,
+.las-palmas-comments,
+.blue-moon,
+.zandvoort,
+.aqueen-lavender {
   overflow-x: hidden;
 }
